--- a/forex-lp/sass/blocks/miss.scss
+++ b/forex-lp/sass/blocks/miss.scss
@@ -28,4 +28,12 @@
   }
 }
 
-@media screen and ($mobile-widths) {}
+@media screen and ($mobile-widths) {
+  .miss__center {
+    font-size: 20px;
+    
+    & span {
+      font-size: 35px;
+    }
+  }
+}
