--- a/forex-lp/sass/blocks/form.scss
+++ b/forex-lp/sass/blocks/form.scss
@@ -49,7 +49,7 @@
 
 @media screen and ($tablet-widths) {}
 
-@media screen and ($mobile-widths) {
+@media screen and ($mobile-widths) {  
   .form__flex {
     flex-direction: column;
   }
@@ -66,6 +66,7 @@
     height: auto;
     margin-bottom: 20px;
     padding: 15px 40px;
+    font-size: 16px;
     border-radius: 5px;
   }
 }
