--- a/forex-lp/sass/blocks/promo.scss
+++ b/forex-lp/sass/blocks/promo.scss
@@ -14,7 +14,6 @@
 
 @media screen and ($mobile-widths) {
   .promo__logo {
-    width: 300px;
-    background-size: contain;
+    height: 80px;
   }
 }
