--- a/forex-lp/sass/global/fonts.scss
+++ b/forex-lp/sass/global/fonts.scss
@@ -1,8 +1,7 @@
 @font-face {
 	font-family: 'SF UI Text';
 	src: local('SF UI Text Heavy Italic'), local('SFUIText-HeavyItalic'),
-		url('SFUIText-HeavyItalic.woff') format('woff'),
-		url('SFUIText-HeavyItalic.ttf') format('truetype');
+		url('SFUIText-HeavyItalic.woff') format('woff');
 	font-weight: 300;
 	font-style: italic;
 }
@@ -10,8 +9,7 @@
 @font-face {
 	font-family: 'SF UI Text';
 	src: local('SF UI Text Light Italic'), local('SFUIText-LightItalic'),
-		url('SFUIText-LightItalic.woff') format('woff'),
-		url('SFUIText-LightItalic.ttf') format('truetype');
+		url('SFUIText-LightItalic.woff') format('woff');
 	font-weight: 300;
 	font-style: italic;
 }
@@ -19,8 +17,7 @@
 @font-face {
 	font-family: 'SF UI Text';
 	src: local('SF UI Text Medium Italic'), local('SFUIText-MediumItalic'),
-		url('SFUIText-MediumItalic.woff') format('woff'),
-		url('SFUIText-MediumItalic.ttf') format('truetype');
+		url('SFUIText-MediumItalic.woff') format('woff');
 	font-weight: 500;
 	font-style: italic;
 }
@@ -28,8 +25,7 @@
 @font-face {
 	font-family: 'SF UI Display';
 	src: local('SF UI Display Medium'), local('SFUIDisplay-Medium'),
-		url('SFUIDisplay-Medium.woff') format('woff'),
-		url('SFUIDisplay-Medium.ttf') format('truetype');
+		url('SFUIDisplay-Medium.woff') format('woff');
 	font-weight: 500;
 	font-style: normal;
 }
@@ -37,8 +33,7 @@
 @font-face {
 	font-family: 'SF UI Display';
 	src: local('SF UI Display Regular'), local('SFUIDisplay-Regular'),
-		url('SFUIDisplay-Regular.woff') format('woff'),
-		url('SFUIDisplay-Regular.ttf') format('truetype');
+		url('SFUIDisplay-Regular.woff') format('woff');
 	font-weight: normal;
 	font-style: normal;
 }
@@ -46,8 +41,7 @@
 @font-face {
 	font-family: 'SF UI Display';
 	src: local('SF UI Display Light'), local('SFUIDisplay-Light'),
-		url('SFUIDisplay-Light.woff') format('woff'),
-		url('SFUIDisplay-Light.ttf') format('truetype');
+		url('SFUIDisplay-Light.woff') format('woff');
 	font-weight: 300;
 	font-style: normal;
 }
@@ -55,8 +49,7 @@
 @font-face {
 	font-family: 'SF UI Display';
 	src: local('SF UI Display Thin'), local('SFUIDisplay-Thin'),
-		url('SFUIDisplay-Thin.woff') format('woff'),
-		url('SFUIDisplay-Thin.ttf') format('truetype');
+		url('SFUIDisplay-Thin.woff') format('woff');
 	font-weight: 100;
 	font-style: normal;
 }
@@ -64,8 +57,7 @@
 @font-face {
 	font-family: 'SF UI Display';
 	src: local('SF UI Display Ultralight'), local('SFUIDisplay-Ultralight'),
-		url('SFUIDisplay-Ultralight.woff') format('woff'),
-		url('SFUIDisplay-Ultralight.ttf') format('truetype');
+		url('SFUIDisplay-Ultralight.woff') format('woff');
 	font-weight: 100;
 	font-style: normal;
 }
@@ -73,8 +65,7 @@
 @font-face {
 	font-family: 'SF UI Text';
 	src: local('SF UI Text Semibold'), local('SFUIText-Semibold'),
-		url('SFUIText-Semibold.woff') format('woff'),
-		url('SFUIText-Semibold.ttf') format('truetype');
+		url('SFUIText-Semibold.woff') format('woff');
 	font-weight: 600;
 	font-style: normal;
 }
@@ -82,8 +73,7 @@
 @font-face {
 	font-family: 'SF UI Display';
 	src: local('SF UI Display Semibold'), local('SFUIDisplay-Semibold'),
-		url('SFUIDisplay-Semibold.woff') format('woff'),
-		url('SFUIDisplay-Semibold.ttf') format('truetype');
+		url('SFUIDisplay-Semibold.woff') format('woff');
 	font-weight: 600;
 	font-style: normal;
 }
@@ -91,8 +81,7 @@
 @font-face {
 	font-family: 'SF UI Text';
 	src: local('SF UI Text Regular'), local('SFUIText-Regular'),
-		url('SFUIText-Regular.woff') format('woff'),
-		url('SFUIText-Regular.ttf') format('truetype');
+		url('SFUIText-Regular.woff') format('woff');
 	font-weight: normal;
 	font-style: normal;
 }
@@ -100,8 +89,7 @@
 @font-face {
 	font-family: 'SF UI Display';
 	src: local('SF UI Display Black'), local('SFUIDisplay-Black'),
-		url('SFUIDisplay-Black.woff') format('woff'),
-		url('SFUIDisplay-Black.ttf') format('truetype');
+		url('SFUIDisplay-Black.woff') format('woff');
 	font-weight: 300;
 	font-style: normal;
 }
@@ -109,8 +97,7 @@
 @font-face {
 	font-family: 'SF UI Text';
 	src: local('SF UI Text Bold Italic'), local('SFUIText-BoldItalic'),
-		url('SFUIText-BoldItalic.woff') format('woff'),
-		url('SFUIText-BoldItalic.ttf') format('truetype');
+		url('SFUIText-BoldItalic.woff') format('woff');
 	font-weight: bold;
 	font-style: italic;
 }
@@ -118,8 +105,7 @@
 @font-face {
 	font-family: 'SF UI Text';
 	src: local('SF UI Text Bold'), local('SFUIText-Bold'),
-		url('SFUIText-Bold.woff') format('woff'),
-		url('SFUIText-Bold.ttf') format('truetype');
+		url('SFUIText-Bold.woff') format('woff');
 	font-weight: bold;
 	font-style: normal;
 }
@@ -127,8 +113,7 @@
 @font-face {
 	font-family: 'SF UI Display';
 	src: local('SF UI Display Heavy'), local('SFUIDisplay-Heavy'),
-		url('SFUIDisplay-Heavy.woff') format('woff'),
-		url('SFUIDisplay-Heavy.ttf') format('truetype');
+		url('SFUIDisplay-Heavy.woff') format('woff');
 	font-weight: 900;
 	font-style: normal;
 }
@@ -136,8 +121,7 @@
 @font-face {
 	font-family: 'SF UI Text';
 	src: local('SF UI Text Light'), local('SFUIText-Light'),
-		url('SFUIText-Light.woff') format('woff'),
-		url('SFUIText-Light.ttf') format('truetype');
+		url('SFUIText-Light.woff') format('woff');
 	font-weight: 300;
 	font-style: normal;
 }
@@ -145,8 +129,7 @@
 @font-face {
 	font-family: 'SF UI Text';
 	src: local('SF UI Text Heavy'), local('SFUIText-Heavy'),
-		url('SFUIText-Heavy.woff') format('woff'),
-		url('SFUIText-Heavy.ttf') format('truetype');
+		url('SFUIText-Heavy.woff') format('woff');
 	font-weight: 900;
 	font-style: normal;
 }
@@ -154,8 +137,7 @@
 @font-face {
 	font-family: 'SF UI Text';
 	src: local('SF UI Text Medium'), local('SFUIText-Medium'),
-		url('SFUIText-Medium.woff') format('woff'),
-		url('SFUIText-Medium.ttf') format('truetype');
+		url('SFUIText-Medium.woff') format('woff');
 	font-weight: 500;
 	font-style: normal;
 }
@@ -163,8 +145,7 @@
 @font-face {
 	font-family: 'SF UI Display';
 	src: local('SF UI Display Bold'), local('SFUIDisplay-Bold'),
-		url('SFUIDisplay-Bold.woff') format('woff'),
-		url('SFUIDisplay-Bold.ttf') format('truetype');
+		url('SFUIDisplay-Bold.woff') format('woff');
 	font-weight: bold;
 	font-style: normal;
 }
@@ -172,8 +153,7 @@
 @font-face {
 	font-family: 'SF UI Text';
 	src: local('SF UI Text Italic'), local('SFUIText-Italic'),
-		url('SFUIText-Italic.woff') format('woff'),
-		url('SFUIText-Italic.ttf') format('truetype');
+		url('SFUIText-Italic.woff') format('woff');
 	font-weight: normal;
 	font-style: italic;
 }
@@ -181,8 +161,7 @@
 @font-face {
 	font-family: 'SF UI Text';
 	src: local('SF UI Text Semibold Italic'), local('SFUIText-SemiboldItalic'),
-		url('SFUIText-SemiboldItalic.woff') format('woff'),
-		url('SFUIText-SemiboldItalic.ttf') format('truetype');
+		url('SFUIText-SemiboldItalic.woff') format('woff');
 	font-weight: 600;
 	font-style: italic;
 }
