--- a/forex-lp/sass/blocks/header.scss
+++ b/forex-lp/sass/blocks/header.scss
@@ -9,7 +9,7 @@
   
   & b {
     display: block;
-    font-family: 'SF UI Display Black';
+    font-family: 'SF UI Display Black', 'Arial', sans-serif;
   }
   
   & small {
