--- a/forex-lp/sass/blocks/acc.scss
+++ b/forex-lp/sass/blocks/acc.scss
@@ -8,14 +8,14 @@
     color: $mc;
     font-size: 32px;
     font-weight: bold;
-    font-family: 'SF UI Display';
+    font-family: 'SF UI Display', sans-serif;
   }
   
   & a {
     padding: 25px;
     color: #323232;
     font-size: 32px;
-    font-family: 'SF UI Display Black';
+    font-family: 'SF UI Display Black', sans-serif;
     text-decoration: none;
     border-radius: 47px;
     background: #f2c318;
@@ -30,7 +30,7 @@
     margin-top: 60px;
     color: $mc;
     font-size: 16px;
-    font-family: 'SF UI Display Regular';
+    font-family: 'SF UI Display Regular', sans-serif;
   }
 }
 
