--- a/forex-lp/sass/blocks/app.scss
+++ b/forex-lp/sass/blocks/app.scss
@@ -12,12 +12,12 @@
   & b {
     font-size: 30px;
     font-weight: bold;
-    font-family: 'SF UI Display';
+    font-family: 'SF UI Display', sans-serif;
   }
   
   & p {
     font-size: 20px;
-    font-family: 'SF UI Display Regular';
+    font-family: 'SF UI Display Regular', sans-serif;
   }
   
   & img {
