--- a/forex-lp/sass/blocks/edge.scss
+++ b/forex-lp/sass/blocks/edge.scss
@@ -16,12 +16,12 @@
   & b {
     font-size: 20px;
     font-weight: bold;
-    font-family: 'SF UI Display';
+    font-family: 'SF UI Display', sans-serif;
   }
   
   & p {
     margin-bottom: 0;
-    font-family: 'SF UI Display Regular';
+    font-family: 'SF UI Display Regular', sans-serif;
   }
 }
 
