--- a/forex-lp/sass/blocks/footer.scss
+++ b/forex-lp/sass/blocks/footer.scss
@@ -9,14 +9,14 @@
   
   & b {
     font-size: 21px;
-    font-family: 'SF UI Display Black';
+    font-family: 'SF UI Display Black', sans-serif;
     text-transform: uppercase;
     opacity: 0.7;
   }
   
   & p {
     font-size: 13px;
-    font-family: 'SF UI Display Regular';
+    font-family: 'SF UI Display Regular', sans-serif;
     opacity: 0.7;
   }
 }
