--- a/xm/sass/blocks/title.scss
+++ b/xm/sass/blocks/title.scss
@@ -4,7 +4,8 @@
   
   & h3 {
     color: #fff;
-    margin-top: 50px;
+    margin-top: 0;
+    padding-top: 50px;
     font-size: 30px;
     font-weight: bold;
     text-align: center;
