--- a/forex/css/style.css
+++ b/forex/css/style.css
@@ -1168,16 +1168,15 @@ body {
   -webkit-box-align: start;
   -ms-flex-align: start;
   align-items: flex-start;
-  -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
-  justify-content: space-between;
-  -ms-flex-wrap: wrap;
-  flex-wrap: wrap;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   padding-top: 100px; }
 
 .account__box {
   position: relative;
   width: 250px;
+  margin: 0 10px;
   margin-bottom: 70px;
   -webkit-box-shadow: 0px 0px 7px 0px rgba(2, 2, 2, 0.35);
   box-shadow: 0px 0px 7px 0px rgba(2, 2, 2, 0.35);
@@ -1227,12 +1226,11 @@ body {
         background: #f2c318; }
 
 .account__popular {
-  position: absolute;
-  top: -49px;
-  left: 20px;
-  width: 210px;
-  height: 49px;
-  background: url("../img/acc-popular.png"); }
+  padding: 10px 0;
+  color: #fff;
+  font-weight: bold;
+  text-align: center;
+  background: #F1B90F; }
 
 .account__box--bronze footer {
   margin-top: 110px; }
@@ -1240,11 +1238,43 @@ body {
 .account__box--bronze:hover header {
   background: #999999; }
 
+.account__box--silver header::before {
+  content: 'Most Popular';
+  position: absolute;
+  top: -35px;
+  left: 0;
+  width: 100%;
+  font-size: 15px;
+  font-weight: bold;
+  text-align: center;
+  text-transform: none;
+  z-index: 10; }
+
 .account__box--silver footer {
   margin-top: 20px; }
 
 .account__box--silver:hover header {
   background: #999999; }
+
+.account__box--silver::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: -70px;
+  width: 50%;
+  height: 70px;
+  background: -webkit-gradient(linear, left top, right bottom, color-stop(50%, transparent), color-stop(50.7%, #f2c318));
+  background: linear-gradient(to bottom right, transparent 50%, #f2c318 50.7%); }
+
+.account__box--silver::after {
+  content: "";
+  position: absolute;
+  right: 0;
+  top: -70px;
+  width: 50%;
+  height: 70px;
+  background: -webkit-gradient(linear, right top, left bottom, color-stop(50%, transparent), color-stop(50.7%, #f2c318));
+  background: linear-gradient(to bottom left, transparent 50%, #f2c318 50.7%); }
 
 .account__box--gold {
   -webkit-transition: 0.3s;
