--- a/forex/sass/blocks/account-types.scss
+++ b/forex/sass/blocks/account-types.scss
@@ -95,7 +95,7 @@
   }
   
   &:hover header {
-    background: #999999;
+    background: #dc9554;
   }
 }
 
@@ -155,7 +155,7 @@
   }
   
   &:hover header {
-    background: #999999;
+    background: #e7c85d;
   }
 }
 
@@ -167,7 +167,7 @@
   }
   
   &:hover header {
-    background: #999999;
+    background: #4b426d;
   }
 }
 
@@ -179,7 +179,7 @@
   }
   
   &:hover header {
-    background: #999999;
+    background: #ff7200;
   }
 }
 
