--- a/forex/css/style.css
+++ b/forex/css/style.css
@@ -765,7 +765,6 @@ body {
 
 .sign {
   text-align: center;
-  text-transform: uppercase;
   background: #2e2963 url("../img/sign-bg.png") no-repeat;
   background-size: cover; }
 
@@ -774,7 +773,8 @@ body {
   margin-bottom: 0;
   color: white;
   font-size: 30px;
-  font-weight: bold; }
+  font-weight: bold;
+  text-transform: uppercase; }
 
 .sign__text {
   margin-top: 10px;
@@ -783,7 +783,7 @@ body {
   font-weight: bold; }
 
 .sign__input {
-  width: 430px;
+  width: 300px;
   margin-bottom: 60px;
   padding: 10px; }
 
@@ -1254,7 +1254,7 @@ body {
   margin-top: 110px; }
 
 .account__box--bronze:hover header {
-  background: #999999; }
+  background: #dc9554; }
 
 .account__box--silver header::before {
   content: 'Most Popular';
@@ -1300,7 +1300,7 @@ body {
   .account__box--gold footer {
     margin-top: 5px; }
   .account__box--gold:hover header {
-    background: #999999; }
+    background: #e7c85d; }
 
 .account__box--free {
   -webkit-transition: 0.3s;
@@ -1308,7 +1308,7 @@ body {
   .account__box--free footer {
     margin-top: 5px; }
   .account__box--free:hover header {
-    background: #999999; }
+    background: #4b426d; }
 
 .account__box--zulu {
   -webkit-transition: 0.3s;
@@ -1316,7 +1316,7 @@ body {
   .account__box--zulu footer {
     margin-top: 150px; }
   .account__box--zulu:hover header {
-    background: #999999; }
+    background: #ff7200; }
 
 @media screen and (max-width: 768px) {
   .account__types {
