--- a/forex/css/style.css
+++ b/forex/css/style.css
@@ -809,8 +809,9 @@ body {
 
 .sign__submit {
   margin-left: 20px;
-  padding: 11px 30px;
+  padding: 10px 30px;
   color: #2e2963;
+  font-size: 16px;
   font-weight: bold;
   text-transform: uppercase;
   background: #f2c318;
