--- a/forex/sass/blocks/sign.scss
+++ b/forex/sass/blocks/sign.scss
@@ -34,8 +34,9 @@
 
 .sign__submit {
   margin-left: 20px;
-  padding: 11px 30px;
+  padding: 10px 30px;
   color: $mc;
+  font-size: 16px;
   font-weight: bold;
   text-transform: uppercase;
   background: $sc;
