--- a/forex/sass/blocks/online.scss
+++ b/forex/sass/blocks/online.scss
@@ -28,6 +28,7 @@
   padding-top: 165px;
   text-align: center;
   text-transform: uppercase;
+  transition: 0.3s;
   
   & b {
     font-size: 17px;
@@ -56,10 +57,28 @@
 
 .online__box--zulu {
   background: url('../img/online-1.png') no-repeat top;
+  
+  &:hover {
+    background: url('../img/online-1-h.png') no-repeat top;
+  }
+  
+  & a:hover {
+    color: #fff;
+    background: #ff7200;
+  }
 }
 
 .online__box--tradency {
   background: url('../img/online-2.png') no-repeat top;
+  
+  &:hover {
+    background: url('../img/online-2-h.png') no-repeat top;
+  }
+  
+  & a:hover {
+    color: #fff;
+    background: #f15b22;
+  }
 }
 
 .online__box--algo {
