--- a/forex/sass/blocks/slider.scss
+++ b/forex/sass/blocks/slider.scss
@@ -32,22 +32,22 @@
 }
 
 .slider__slide--one {
-  background: url('../img/slider-f.png') no-repeat center;
+  background: url('../img/slider-f.png') no-repeat;
   background-size: cover;
 }
 
 .slider__slide--two {
-  background: url('../img/slider-s.png') no-repeat center;
+  background: url('../img/slider-s.png') no-repeat;
   background-size: cover;
 }
 
 .slider__slide--three {
-  background: url('../img/slider-t.png') no-repeat center;
+  background: url('../img/slider-t.png') no-repeat;
   background-size: cover;
 }
 
 .slider__slide--four {
-  background: url('../img/slider-a.png') no-repeat center;
+  background: url('../img/slider-fo.png') no-repeat;
   background-size: cover;
 }
 
