--- a/forex/css/style.css
+++ b/forex/css/style.css
@@ -506,19 +506,19 @@ body {
     height: 132px; }
 
 .slider__slide--one {
-  background: url("../img/slider-f.png") no-repeat;
+  background: url("../img/slider-f.png") no-repeat top;
   background-size: cover; }
 
 .slider__slide--two {
-  background: url("../img/slider-s.png") no-repeat;
+  background: url("../img/slider-s.png") no-repeat top;
   background-size: cover; }
 
 .slider__slide--three {
-  background: url("../img/slider-t.png") no-repeat;
+  background: url("../img/slider-t.png") no-repeat top;
   background-size: cover; }
 
 .slider__slide--four {
-  background: url("../img/slider-fo.png") no-repeat;
+  background: url("../img/slider-fo.png") no-repeat top;
   background-size: cover; }
 
 .slick-dots {
