--- a/forex/sass/blocks/slider.scss
+++ b/forex/sass/blocks/slider.scss
@@ -29,6 +29,15 @@
   & img {
     height: 132px;
   }
+  
+  & small {
+    display: block;
+    margin-top: 20px;
+    color: #fff;
+    font-size: 10px;
+    width: 240px;
+    text-align: center;
+  }
 }
 
 .slider__slide--one {
