--- a/forex/sass/blocks/global.scss
+++ b/forex/sass/blocks/global.scss
@@ -23,6 +23,15 @@
       background: transparent;
     }
   }
+  
+  & small {
+    display: block;
+    margin-top: 20px;
+    color: #fff;
+    font-size: 10px;
+    width: 240px;
+    text-align: center;
+  }
 }
 
 .global__box {
