--- a/forex/sass/blocks/scroll.scss
+++ b/forex/sass/blocks/scroll.scss
@@ -38,6 +38,15 @@
       background: transparent;
     }
   }
+  
+  & small {
+    display: block;
+    margin-top: 20px;
+    color: #fff;
+    font-size: 10px;
+    width: 240px;
+    text-align: center;
+  }
 }
 
 .scroll__flex {
