--- a/forex/css/style.css
+++ b/forex/css/style.css
@@ -127,6 +127,19 @@ body {
     color: #2e2963;
     background: #f2c318; }
 
+.page-header__user-menu {
+  position: relative; }
+  .page-header__user-menu::after {
+    content: 'Trading involves risk of loss';
+    position: absolute;
+    top: 34px;
+    width: 180px;
+    color: #2e2963;
+    font-size: 10px;
+    font-weight: bold;
+    text-align: center;
+    text-transform: none; }
+
 .page-header__link--violet {
   margin-right: 10px;
   background: #2e2963; }
@@ -140,6 +153,8 @@ body {
 @media screen and (max-width: 1200px) {
   .page-header__item a {
     font-size: 14px; }
+  .page-header__user-menu::after {
+    width: 160px; }
   .page-header__link {
     padding: 10px 15px; }
   .page-header__link--violet {
@@ -570,6 +585,8 @@ body {
       padding: 6px 15px; }
   .slider__slide {
     height: 350px; }
+    .slider__slide small {
+      width: auto; }
   .slick-dots {
     bottom: -25px; }
   .slick-dots li button::before {
@@ -732,6 +749,8 @@ body {
     text-align: center;
     background: url("../img/global.png") no-repeat;
     background-size: cover; }
+    .global small {
+      width: auto; }
   .global__title {
     font-size: 55px; }
   .global__list {
@@ -856,6 +875,7 @@ body {
     width: 80%;
     margin-bottom: 20px; }
   .sign__submit {
+    margin-left: 0;
     margin-bottom: 50px; } }
 
 .adv {
@@ -1031,6 +1051,8 @@ body {
       color: #f2c318;
       background: transparent;
       border: 1px solid #f2c318; }
+    .scroll__second small {
+      width: auto; }
   .scroll__title {
     padding-top: 0;
     font-size: 55px;
