--- a/forex/css/style.css
+++ b/forex/css/style.css
@@ -713,7 +713,7 @@ body {
     text-align: center; }
 
 .global__box {
-  padding: 100px 0; }
+  padding: 100px 0 45px 0; }
 
 .global__title {
   margin: 0;
@@ -765,9 +765,7 @@ body {
   display: -ms-flexbox;
   display: flex;
   -ms-flex-pack: distribute;
-  justify-content: space-around;
-  padding-top: 50px;
-  padding-bottom: 80px; }
+  justify-content: space-around; }
   .trading__flex p {
     width: 500px;
     -ms-flex-item-align: center;
@@ -776,7 +774,7 @@ body {
     opacity: 0.7; }
 
 .trading__title {
-  margin-top: 60px;
+  margin-top: 50px;
   padding: 10px 50px;
   color: white;
   font-size: 30px;
