--- a/forex/sass/blocks/trading.scss
+++ b/forex/sass/blocks/trading.scss
@@ -5,8 +5,8 @@
 .trading__flex {
   display: flex;
   justify-content: space-around;
-  padding-top: 50px;
-  padding-bottom: 80px;
+  // padding-top: 50px;
+  // padding-bottom: 80px;
   
   & p {
     width: 500px;
@@ -18,7 +18,7 @@
 }
 
 .trading__title {
-  margin-top: 60px;
+  margin-top: 50px;
   padding: 10px 50px;
   color: white;
   font-size: 30px;
