--- a/forex-lp/sass/blocks/form.scss
+++ b/forex-lp/sass/blocks/form.scss
@@ -37,6 +37,7 @@
   font-family: 'SF UI Display Black', sans-serif;
   text-transform: uppercase;
   border: none;
+  border-radius: 10px;
   background: #f2c318;
   box-shadow: 5px 5px 1px 0 rgba(0, 0, 0, 0.5);
   cursor: pointer;
