--- a/crypto-b/css/style.css
+++ b/crypto-b/css/style.css
@@ -656,15 +656,14 @@ input::placeholder {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
-  justify-content: space-between;
+  -ms-flex-pack: distribute;
+  justify-content: space-around;
   padding: 50px 0; }
 
 .news__left-column,
 .news__middle-column,
 .news__right-column {
-  width: 30%; }
+  width: 340px; }
 
 /* Smartphones (вертикальная и горизонтальная ориентация) ----------- */
 @media only screen and (min-width: 320px) and (max-width: 480px) {
