--- a/crypto-b/sass/blocks/crypto.scss
+++ b/crypto-b/sass/blocks/crypto.scss
@@ -9,9 +9,9 @@
     color: $w;
     font-size: 50px;
     font-weight: 700;
-    background: #000;
+    // background: #000;
     border-radius: 10px;
-    text-align: center;
+    text-align: right;
     text-transform: uppercase;
   }
   
@@ -23,7 +23,7 @@
     font-size: 22px;
     font-weight: 500;
     text-align: right;
-    text-transform: uppercase;
+    // text-transform: uppercase;
   }
   
   & a {
