--- a/forex/sass/blocks/trading.scss
+++ b/forex/sass/blocks/trading.scss
@@ -12,17 +12,17 @@
     width: 500px;
     // padding-top: 130px;
     align-self: center;
-    text-align: center;
+    // text-align: center;
     opacity: 0.7;
   }
 }
 
 .trading__title {
   margin-top: 50px;
-  padding: 10px 50px;
-  color: white;
+  padding: 10px 0;
+  color: $mc;
   font-size: 30px;
-  background: $mc;
+  // background: $mc;
   text-align: center;
 }
 
@@ -54,6 +54,7 @@
   
   .trading__img {
     width: auto;
+    height: 250px;
     background: url('../img/trading-bg.png') no-repeat center;
     background-size: contain;
   }
