--- a/forex-lp/sass/blocks/header.scss
+++ b/forex-lp/sass/blocks/header.scss
@@ -32,7 +32,8 @@
   width: 500px;
   // height: 205px;
   padding: 15px;
-  background: $mc;
+  background: rgba(0, 0, 0, 0.9);
+  // background: $mc;
   
   & b {
     margin-bottom: 10px;
